@@ -47,7 +47,7 @@ public class AnswerController {
     Answer answer = answerService.create(question, answerForm.getContent(), siteUser);
     // 답변 등록 끝
     
-    return String.format("redirect:/question/detail/%s#answer_%d", id, answer.getId());
+    return String.format("redirect:/question/detail/%s#answer_%s", answer.getQuestion().getId(), answer.getId());
   }
 
   @PreAuthorize("isAuthenticated()")
@@ -82,7 +82,7 @@ public class AnswerController {
     }
 
     answerService.modify(answer, answerForm.getContent());
-    return String.format("redirect:/question/detail/%s", answer.getQuestion().getId());
+    return String.format("redirect:/question/detail/%s#answer_%s", answer.getQuestion().getId(), answer.getId());
   }
 
   @PreAuthorize("isAuthenticated()")
@@ -105,6 +105,6 @@ public class AnswerController {
     SiteUser siteUser = userService.getUser(principal.getName());
 
     answerService.vote(answer, siteUser);
-    return "redirect:/question/detail/%d".formatted(answer.getQuestion().getId());
+    return String.format("redirect:/question/detail/%s#answer_%s", answer.getQuestion().getId(), answer.getId());
   }
 }
